--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,11 @@
- 
+body {
+    margin: 0;
+  }
+.main {
+    width: 1000px;
+    margin: 0 auto;
+    background-color: beige;
+ }
+.main h1 {
+    text-align: center;
+}
