--- a/css/main.css
+++ b/css/main.css
@@ -32,3 +32,6 @@ body {
     box-sizing: border-box;
     border:1px solid #f2f2f2;
 }
+.gamecontainer div[data-bomb="0"] {
+    background-color: #E18728;
+}
