--- a/css/main.css
+++ b/css/main.css
@@ -27,9 +27,11 @@ body {
 .gamecontainer div {
     width: 30px;
     height: 30px;
+    text-align: center;
     background-color: #e6e4a9;
     float: left;
     box-sizing: border-box;
+    padding: 5px;
     border:1px solid #f2f2f2;
 }
 .gamecontainer div[data-bomb="1"] {
