--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,9 @@ body {
     padding: 5px;
     border:1px solid #f2f2f2;
 }
+.gamecontainer div.reveal {
+    background-color:#d8d7c1;
+}
 .gamecontainer div[data-bomb="1"] {
-    background-color: #E18728;
+    background-color: #f00;
 }
