--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,9 @@ body {
     padding: 5px;
     border:1px solid #f2f2f2;
 }
-.gamecontainer div.reveal {
+.gamecontainer div.revealed {
     background-color:#d8d7c1;
 }
-.gamecontainer div[data-bomb="1"] {
+.gamecontainer div.blast {
     background-color: #f00;
 }
