--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@
 body {
     background-color: #fff;
     margin: 0;
-    
     color: #42b983;
     font-family:"Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
   }
@@ -25,6 +24,7 @@ body {
     clear: both;
 }
 .gamecontainer div {
+    cursor:pointer;
     width: 30px;
     height: 30px;
     text-align: center;
@@ -36,6 +36,7 @@ body {
 }
 .gamecontainer div.revealed {
     background-color:#d8d7c1;
+    cursor:default;
 }
 .gamecontainer div.blast {
     background-color: #f00;
